Finally got scroll working on mobile and other fixed issues

--- a/public/web/app/themes/bovember/resources/styles/layouts/_header.scss
+++ b/public/web/app/themes/bovember/resources/styles/layouts/_header.scss
@@ -185,6 +185,7 @@
 
             @include media-breakpoint-down(sm) {
                 font-size: 1rem;
+                bottom: 1.125rem;
             }
 
             .plyr__controls {
@@ -243,6 +244,10 @@
             opacity: 0;
             transform: translateY(50px);
 
+            @include media-breakpoint-down(sm) {
+                padding: 1rem 0.825rem;
+            }
+
             &:focus {
                 box-shadow: none;
             }
@@ -252,6 +257,10 @@
                 border: 2px solid $red;
                 width: 2rem;
                 margin-bottom: 0.25rem;
+
+                @include media-breakpoint-down(sm) {
+                    width: 1.5rem;
+                }
 
                 &:last-child {
                     margin-bottom: 0;
@@ -305,6 +314,10 @@
         #mobile-menu {
             .navbar {
                 z-index: 50;
+
+                @include media-breakpoint-down(sm) {
+                    padding-top: 0;
+                }
             }
 
             #panel-navbar-collapse {
