--- a/public/web/app/themes/bovember/resources/styles/layouts/_pages.scss
+++ b/public/web/app/themes/bovember/resources/styles/layouts/_pages.scss
@@ -61,6 +61,11 @@ html {
             padding-top: 9rem;
         }
 
+        @include media-breakpoint-down(sm) {
+            padding: 9rem 1rem 0;
+            min-height: 100vh;
+        }
+
         /** Container with hidden scrollbar */
         #container {
             max-height: 100%;
@@ -73,6 +78,8 @@ html {
             /** Top nav on CPT pages */
             #wrapper {
                 #content {
+                    position: relative;
+
                     .sticky-header {
                         background-color: $black;
                         padding-top: 3%;
@@ -87,8 +94,21 @@ html {
                             padding-left: 2.25rem;
                         }
 
+                        @include media-breakpoint-down(sm) {
+                            margin-top: -9rem;
+                            padding-top: 5.1875rem;
+                            padding-left: 0;
+                            left: 0;
+                            right: 0;
+                            top: 0;
+                        }
+
                         .cpt-nav {
                             margin-bottom: 3rem;
+
+                            @include media-breakpoint-down(sm) {
+                                margin-bottom: 1rem;
+                            }
 
                             a {
                                 font-size: 1.5rem;
