--- a/public/web/app/themes/bovember/resources/styles/pages/_01-home.scss
+++ b/public/web/app/themes/bovember/resources/styles/pages/_01-home.scss
@@ -33,7 +33,8 @@
                     }
 
                     @include media-breakpoint-down(sm) {
-                        font-size: 3.5rem;
+                        font-size: 3.75rem;
+                        line-height: 1.25;
                     }
                 }
 
@@ -52,7 +53,7 @@
                     }
 
                     @include media-breakpoint-down(sm) {
-                        font-size: 2.5rem;
+                        font-size: 2.75rem;
                     }
                 }
             }
