--- a/public/web/app/themes/bovember/resources/styles/pages/_02-shows.scss
+++ b/public/web/app/themes/bovember/resources/styles/pages/_02-shows.scss
@@ -7,6 +7,10 @@
             padding-top: 9rem;
         }
 
+        @include media-breakpoint-down(md) {
+            min-height: 100vh;
+        }
+
         #content {
             #shows-container {
                 #main-content {
