--- a/public/web/app/themes/bovember/resources/styles/pages/_08-about.scss
+++ b/public/web/app/themes/bovember/resources/styles/pages/_08-about.scss
@@ -20,6 +20,7 @@
                     }
 
                     @include media-breakpoint-down(sm) {
+                        margin-top: 0;
                         margin-left: 0;
                         padding-left: calc(var(--bs-gutter-x) * .5);
                         padding-right: calc(var(--bs-gutter-x) * .5);
